<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ImageSelect</string>
    <string name="action_settings">Settings</string>
    <string name="image_content_description">Photo</string>

    <string name="select_mode">Select Mode</string>
    <string name="mode_single">Single-Choice</string>
    <string name="mode_multi">Multi-Choice</string>
    <string name="max_select_amount">Max Selected Amount</string>
    <string name="hint_default_amount">default amount is 9</string>
    <string name="hint_default_image_count">default amount is 3</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="theme">Theme Select</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_custom">Custom</string>
    <string name="go_select">Select</string>
    <string name="open_camera_only">Open Camera Only</string>
    <string name="max_image_span_count">image span count</string>
    <string name="open_video">Video Select</string>

    <string name="test_crop">Test Crop</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_width" tools:ignore="MissingTranslation">Width</string>
    <string name="label_height" translatable="false">Height</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>

    <string name="sl_menu_crop">Crop</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale</string>
    <string name="sl_label_original">Original</string>
</resources>
