<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/select_mode"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/choice_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/multi"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_single"/>

            <RadioButton
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_multi"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_select_amount"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/request_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_default_amount"
            android:inputType="number"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_image_span_count"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/image_span_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_default_image_count"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_camera"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/show_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/show"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"/>


            <RadioButton
                android:id="@+id/no_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable"/>

        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_select"/>

        <Button
            android:id="@+id/btn_open_camera_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_camera_only"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>
    </LinearLayout>
</LinearLayout>
